updated notebook to check for perfect images

--- a/images/truncated/hackathon_image_upload.ipynb
+++ b/images/truncated/hackathon_image_upload.ipynb
@@ -49,6 +49,7 @@
     "in_labeled_images = []\n",
     "im_labeled_images = []\n",
     "br_labeled_images = []\n",
+    "perfect_images =[]\n",
     "\n",
     "in_tag = 'Intrinsic defect'\n",
     "im_tag = 'Impurity defect'\n",
@@ -114,6 +115,28 @@
     "        if os.path.isfile(br_label_path):\n",
     "            br_labeled_images.append(labeledImage(image_path))\n",
     "            br_labeled_images[-1].add_labels_from_file(br_tag, br_label_path)\n",
+    "        else:\n",
+    "            continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in os.listdir(picture_dir):\n",
+    "    if file.endswith(\".png\"):\n",
+    "        image_path = os.path.join(picture_dir, file)\n",
+    "        im_label_path = os.path.join(im_labels_dir, file.split('.')[0] + '.txt')\n",
+    "        br_label_path = os.path.join(br_labels_dir, file.split('.')[0] + '.txt')\n",
+    "        in_label_path = os.path.join(in_labels_dir, file.split('.')[0] + '.txt')\n",
+    "\n",
+    "        labeled_images.append(labeledImage(image_path))\n",
+    "        \n",
+    "        # Check if perfect\n",
+    "        if (not os.path.isfile(br_label_path) and not os.path.isfile(im_label_path) and not os.path.isfile(in_label_path)):\n",
+    "            perfect_images.append(labeledImage(image_path))\n",
     "        else:\n",
     "            continue"
    ]
@@ -208,7 +231,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for image in perfect_images: print(image.name)"
+   ]
   },
   {
    "cell_type": "code",
