more finalized notebook

--- a/images/truncated/hackathon_image_upload.ipynb
+++ b/images/truncated/hackathon_image_upload.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "# run in an environment like this\n",
     "# conda create -n hackproj python=3.10 jupyter\n",
-    "# conda activate hackproj"
+    "# conda activate hackproj\n",
+    "# also need util.py and azureapi.py included next to this notebook"
    ]
   },
   {
